--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,9 +1,8 @@
 .header {
-  padding-top: var(--mantine-spacing-sm);
-  background-color: var(--mantine-color-gray-0);
-  border-bottom: 1px solid var(--mantine-color-gray-2);
+  padding-top: var(--mantine-spacing-md);
+  background-color: var(--mantine-color-dark-6);
+  border-bottom: 1px solid transparent;
   margin-bottom: 0px;
-  margin-top: 10px;
 }
 
 .mainSection {
@@ -17,14 +16,14 @@
 }
 
 .user {
-  color: var(--mantine-color-black);
-  padding: var(--mantine-spacing-xs) var(--mantine-spacing-sm);
+  color: var(--mantine-color-dark-0);
+  padding: var(--mantine-spacing-md) var(--mantine-spacing-sm);
   border-radius: var(--mantine-radius-sm);
   transition: background-color 100ms ease;
 }
 
 .user:hover {
-  background-color: var(--mantine-color-white);
+  background-color: var(--mantine-color-dark-8);
 }
 
 @media (max-width: 36em) {
@@ -34,7 +33,7 @@
 }
 
 .userActive {
-  background-color: var(--mantine-color-white);
+  background-color: var(--mantine-color-dark-8);
 }
 
 .tabsList::before {
@@ -47,19 +46,20 @@
   background-color: transparent;
   position: relative;
   bottom: -1px;
+  color: white !important;
 }
 
 .tab::before,
 .tab::after {
-  background-color: var(--mantine-color-gray-2) !important;
+  background-color: var(--mantine-color-dark-7) !important;
 }
 
 .tab:hover {
-  background-color: var(--mantine-color-gray-1);
+  background-color: var(--mantine-color-dark-5);
 }
 
 .tab[data-active] {
-  background-color: var(--mantine-color-white);
-  border-color: var(--mantine-color-gray-2);
+  background-color: var(--mantine-color-dark-7);
+  border-color: var(--mantine-color-dark-7);
   border-bottom-color: transparent;
 }
