--- a/src/components/MapToolbar.module.css
+++ b/src/components/MapToolbar.module.css
@@ -5,7 +5,7 @@
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background: linear-gradient(0deg, rgba(22,35,46,1) 0%, rgba(21,26,29,1) 100%);
   border-radius: 0.75rem;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1);
   padding: 1rem;
@@ -16,12 +16,12 @@
   border-radius: 0.5rem;
   margin-bottom: 1rem;
   transition: background-color 0.2s;
-  background-color: white;
+  background-color: linear-gradient(0deg, rgba(22,35,46,1) 0%, rgba(21,26,29,1) 100%);
   color: rgb(55 65 81);
 }
 
 .actionButton:hover:not(.actionButton--disabled) {
-  background-color: rgb(243 244 246);
+  background-color: #283746;
 }
 
 .actionButton--active {
@@ -30,7 +30,7 @@
 }
 
 .actionButton--disabled {
-  background-color: rgb(229 231 235);
+  background-color: rgb(146, 14, 20, 0.60);
   color: rgb(156 163 175);
   cursor: not-allowed;
 }
@@ -39,4 +39,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
 }
