--- a/src/components/landing/FaqSection.module.css
+++ b/src/components/landing/FaqSection.module.css
@@ -1,8 +1,9 @@
 .wrapper {
-  padding-top: calc(var(--mantine-spacing-xl) * 2);
-  padding-bottom: calc(var(--mantine-spacing-xl) * 2);
-  min-height: 650px;
+  padding-top: calc(var(--mantine-spacing-xl) * 1);
+  padding-bottom: calc(var(--mantine-spacing-xl) * 1);
+  margin-bottom: calc(var(--mantine-spacing-xl) * 1);
   background-color: #f8f9fa;
+  min-width: 1280px;
 }
 
 .title {
