--- a/src/components/landing/FeaturesSection.module.css
+++ b/src/components/landing/FeaturesSection.module.css
@@ -8,6 +8,7 @@
   font-family: var(--mantine-font-family);
   font-weight: 900;
   margin-bottom: var(--mantine-spacing-md);
+  padding-bottom: 0.5em;
   text-align: center;
   color: #16232e;
 
